(GUI) Dep and conf changes.
- Functionally, the UI should now work with the newest pacakges, sans
  some trange rendering bugs.

--- a/webui/src/app.html
+++ b/webui/src/app.html
@@ -9,7 +9,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" data-theme="hamlindigo">
+<body data-sveltekit-preload-data="hover" data-theme="cerberus">
 	<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 </body>
 
